# MusashiRecomp

./: .gitignore  .gitmodules  ACCURACY_BURNDOWN.md  BACKDROP_PRELOAD.md  CLAUDE.md  CODEX_ANALYSIS.md  COSIM_HANDOFF.md  COSIM_ORACLE.md  CYCLE_MODEL_BEETLE.md  ENHANCEMENTS.md  FAITHFUL_TIMING_PLAN.md  GL_RENDERER_HANDOFF.md  HLE_SCHEDULER_CARVEOUT_PLAN.md  ISSUES.md  LICENSE  OVERNIGHT_PROGRESS_20260427.md  PRECISE_IRQ_SLICE.md  README.md  STUBS_TO_FIX.md  TCP_COMMANDS.md  THIRD_PARTY_ATTRIBUTION.md  WEDGE_load4_shell_rootcause.md  WIDESCREEN.md  card1.mcd  card2.mcd  dummy.1.mcr
.github/workflows/: release.yml
accuracy/: axis4_memory_mmio.md  axis5_gpu.md  axis5_mdec.md  axis5_sio_controller.md  axis5_spu.md  load_readfudge_ldabsorb.md
docs/: CASE_A_AOT_GAP.md  MACOS_BUILD_KULA.md  MEMCARD_AUDIT_2026_04_28.md  OVERLAY_CACHE_V2.md  RECURSION_BUG.md  SHADOW_ENHANCEMENTS.md  STRING_TRANSLATION.md  TOMBA2_EXC_CONSULT.md  TOMBA2_EXC_CONSULT_RESPONSE.md  TOMBA2_NATIVE_FMV_FREEZE.md  TOMBA2_SPLASH_ATTRACT_PLAN.md  TOMBA2_WHOOPEE_BAIL.md  beetle-linux.md  beetle_sio_trace_hook.patch  config_schema.md  kula-world-findings.md
games/kula/: game.toml
recompiler/: CMakeLists.txt
recompiler/include/: code_generator.h  function_analysis.h
recompiler/seeds/: dispatch_miss_seeds.json  phase2_ghidra_seeds.json
recompiler/src/: code_generator.cpp  config_loader.cpp  config_loader.h  full_function_emitter.cpp  function_analysis.cpp  function_discovery.cpp  main_bios.cpp  main_psx.cpp  ps1_exe_parser.cpp  strict_translator.cpp
recompiler/tests/: test_overlay_guard_codegen.py
runtime/: CMakeLists.txt  codegen_hash_sources.cmake  runtime.cmake
runtime/include/: audio_shadow.h  autocompile.h  beetle_history.h  bios_hle.h  card_data_writes.h  card_read_summary.h  cdrom.h  code_provider.h  color_lut.h  cosim_state.h  cpu_state.h  crash_trace.h  debug_server.h  device_trace.h  dirty_ram_interp.h  dma.h  event_ring.h  fntrace.h  freeze_heartbeat.h  game_options.h  gpu.h  gpu_gl_renderer.h  gpu_render.h  gpu_sw_renderer.h  gpu_vk_renderer.h  interrupts.h  iso_reader.h  latency_ring.h  lockstep.h  mdec.h  memcard.h  overlay_api.h  overlay_loader.h  overlay_sljit.h  parity_trace.h  psx_cyc.h  psx_cycles.h  psx_fiber.h  psx_instr_cost.h  psx_interpreter.h  (+9 more)
runtime/launcher/: launcher.cpp  launcher.h
runtime/launcher/assets/: launcher.rml
runtime/shaders/: blit.frag  blit.vert  geo.frag  geo.vert  geo_tex.frag  geo_tex.vert  pack.comp
runtime/src/: audio_shadow.c  autocompile.c  beetle_debug_server.c  beetle_libretro.cpp  beetle_main.cpp  bios_hle.c  card_data_writes.c  card_read_summary.c  cdrom.c  code_provider.c  color_lut.c  cosim.c  cosim_state.c  crash_trace.c  debug_server.c  device_trace.c  dirty_ram_interp.c  disc_identity.cpp  dma.c  fntrace.c  freeze_heartbeat.c  game_options.c  gpu.c  gpu_gl_renderer.c  gpu_render.c  gpu_sw_renderer.c  gpu_vk_renderer.c  gte.cpp  interrupts.c  iso_reader.cpp  iso_reader_c.cpp  latency_ring.c  main.cpp  mdec.c  memcard.c  memory.c  overlay_capture.c  overlay_loader.c  overlay_sljit.c  parity_trace.c  (+13 more)
runtime/tests/: sljit_emit_test.c  test_sio_card_protocol.c
runtime/tests/test_dir/: card1.mcd
tools/: _arm_modal.py  _arm_modal_v2.py  _beetle_smoke.py  _dispatch_check.py  _dispatch_check_v2.py  _dispatch_check_v3.py  _dispatch_tail.py  _diverge_table.py  _dual_smoke.py  _dump_beetle_tail.py  _dump_recomp_tail.py  _parse_crash.py  _psx_header_dump.py  _tomba_bios_thunks.py  audit_config.py  bios_emitter_fingerprint.sh  build_instruction_coverage.py  build_instruction_inventory.py  check_chain_init.py  check_postfix_state.py  check_shell_state.py  compile_overlays.py  cosim.py  coverage_vault.py  crop_launcher_assets.ps1  cycle_compare.py  debug_client.py  devtrace_diff.py  drs_filter.py  embed_spirv.py  find_divergence.py  fix_duckstation_deps_paths.py  gen_launcher_assets.ps1  gen_phase2_seeds.py  host_thread_probe.py  inspect_dispatch_ring.py  parity_diff.py  peek_cards.py  probe_card_reads.py  probe_card_writes.py  (+19 more)
tools/_options_session/: _beetle_diff.py  _decode_b0_callers.py  _dump_bios_bytes.py  _dump_ram.py  _event_waits.py  _fn_what_runs.py  _live_loop.py  _read_state.py  _read_tomba_fn.py  _read_word.py  _search_ec_bytes.py  _snapshot.py  _state_diff.py  _thread_live.py  _watch_display.py  _watch_iec.py  _watch_state.py  _wtrace_query.py
tools/cycle_testrom/: .gitignore  CMakeLists.txt  README.md  game.toml  gen_testrom.py  measure.py  seeds.txt
tools/cycle_testrom/disc/: SYSTEM.CNF  cyctest.xml
tools/divergence/: README.md  shot.py  t2probe.py  waitf.py
tools/duckstation/: README.md  build.sh  launch.py
tools/mdec_pin/: FINDING.md  mdec_e2e.c  mdec_pin.c
